[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/player_texture.tres" id="2"]
[ext_resource type="Texture2D" path="res://assets/light_texture.tres" id="3"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 12.0
height = 32.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource(1)
collision_layer = 1
collision_mask = 7

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource(2)
centered = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource(1)

[node name="Light2D" type="Light2D" parent="."]
energy = 1.2
texture = ExtResource(3)
texture_scale = 1.2
range_item_cull_mask = 1
shadow_enabled = true

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="DetectionShape" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource(1)

[node name="NoiseTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = false

[node name="ParryTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
